--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
                     <nav>
                         <ul>
                             <li id="item-1"><a href="index.html">HOME</a></li>
-                            <li id="item-2"><a href="quiz.html">QUIZ</a></li>
-                            <li id="item-4"><a href="about.html">ABOUT</a></li>
-                            <li id="item-3"><a href="notes.html">NOTES</a></li>
-                            <li id="item-3"><a href="pastpapers.html">PAST PAPERS</a></li>
+                            <li id="item-2"><a href="#">QUIZ</a></li>
+                            <li id="item-4"><a href="#">ABOUT</a></li>
+                            <li id="item-3"><a href="#">NOTES</a></li>
+                            <li id="item-3"><a href="#">PAST PAPERS</a></li>
                           </ul>
                     </nav>
                 </div>
