--- a/index.html
+++ b/index.html
@@ -162,6 +162,36 @@
             </div>
         </div>
     </section>
+    <section class="footer">
+        <div class="contain-footer">
+            <div class="logo-footer">
+            <img src="images/temp logo.jpg" alt="">
+
+            </div>
+            <div class="quick-links">
+                <h1>Quick Links</h1>
+                <ul>
+                    <li id ="link-1" ><a href="">HOME</a></li>
+                    <li id ="link-2" ><a href="">QUIZ</a></li>
+                    <li id ="link-3" ><a href="">ABOUT</a></li>
+                    <li id ="link-4" ><a href="">NOTES</a></li>
+                    <li id ="link-5" ><a href="">PAST PAPERS</a></li>
+
+                </ul>
+            </div>
+            <div class="information-footer">
+                <h1>Contact Information</h1>
+                <span>Phone#</span> <p>03448843993</p>
+                <span>Email:</span> <p>zakihaider444@gmail.com</p>
+
+            </div>
+            
+        </div>
+        <div class="copy-right">
+            <p>2021 &copy ALL rights reserved - dummy hai abhi</p>
+
+        </div>
+    </section>
     <script>
          var menupage = document.getElementById("menu-page");
         function showmenu(){
