--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <nav>
                         <ul>
                             <li id="item-1"><a href="index.html">HOME</a></li>
-                            <li id="item-2"><a href="quiz.html">QUIZ</a></li>
+                            <li id="item-2"><a href="quiz-subject.html">QUIZ</a></li>
                             <li id="item-4"><a href="about.html">ABOUT</a></li>
                             <li id="item-3"><a href="notes.html">NOTES</a></li>
                             <li id="item-3"><a href="pastpapers.html">PAST PAPERS</a></li>
@@ -132,7 +132,7 @@
                     <h1>Quiz</h1>
                     <p>Here a dummy text will come related to about us.Here a dummy text will come related to about us.Here a dummy text will come related to about us.</p>
                 </div>
-                <a href =about.html><div class="nav-btn">
+                <a href =quiz-subject.html><div class="nav-btn">
                     Get Started
                   </div></a>
             </div>
@@ -172,7 +172,7 @@
                 <h1>Quick Links</h1>
                 <ul>
                     <li id ="link-1" ><a href="">HOME</a></li>
-                    <li id ="link-2" ><a href="">QUIZ</a></li>
+                    <li id ="link-2" ><a href="quiz-subject">QUIZ</a></li>
                     <li id ="link-3" ><a href="">ABOUT</a></li>
                     <li id ="link-4" ><a href="">NOTES</a></li>
                     <li id ="link-5" ><a href="">PAST PAPERS</a></li>
