--- a/quiz-subject.html
+++ b/quiz-subject.html
@@ -94,7 +94,7 @@
                     <p>Here a dummy text will come related to about us.Here a dummy text will come related to about us.</p>
                 </div>
                 <div class="card-subject chapter-card-1 hidden">
-                      <div class="close-subject">
+                      <div class="close-bio1 close-subject">
                           <button class="close-modal">&times;</button>
                           <h4>CLOSE</h4>
                       </div>
@@ -122,13 +122,13 @@
                     <img src="images/Laboratory-bro.png" alt="">
                 </div>
                 <div class="card-information">
-                    <div class = "Biology-I"><h1>Chemistry-I</h1></div>
+                    <div class = "Chemistry-I"><h1>Chemistry-I</h1></div>
                     
 
                     <p>Here a dummy text will come related to about us.Here a dummy text will come related to about us.</p>
                 </div>
-                <div class="card-subject chapter-card-1 hidden">
-                      <div class="close-subject">
+                <div class="card-subject chapter-card-2 hidden">
+                      <div class="close-subject close-chem1">
                           <button class="close-modal">&times;</button>
                           <h4>CLOSE</h4>
                       </div>
@@ -156,13 +156,13 @@
                     <img src="images/Mathematics-rafiki.png" alt="">
                 </div>
                 <div class="card-information">
-                    <div class = "Biology-I"><h1>Physics-I</h1></div>
+                    <div class = "Physics-I"><h1>Physics-I</h1></div>
                    
 
                     <p>Here a dummy text will come related to about us.Here a dummy text will come related to about us.</p>
                 </div>
-                <div class="card-subject chapter-card-1 hidden">
-                      <div class="close-subject">
+                <div class="card-subject chapter-card-3 hidden">
+                      <div class="close-subject close-phy1">
                           <button class="close-modal">&times;</button>
                           <h4>CLOSE</h4>
                       </div>
@@ -191,12 +191,12 @@
                 </div>
 
                 <div class="card-information">
-                     <div class = "Biology-I"><h1>Biology-II</h1></div>
+                     <div class = "Biology-II"><h1>Biology-II</h1></div>
                     <p>Here a dummy text will come related to about us.Here a dummy text will come related to about us.</p>
                 </div>
-                <div class="card-subject chapter-card-1 hidden">
-                      <div class="close-subject">
-                          <button class="close-modal">&times;</button>
+                <div class="card-subject chapter-card-4 hidden">
+                      <div class="close-subject close-bio2">
+                          <button class="close-modal ">&times;</button>
                           <h4>CLOSE</h4>
                       </div>
                     <div class="chapter-button">1. Introduction to someting</div>
@@ -223,13 +223,13 @@
                     <img src="images/Science-cuate.png" alt="">
                 </div>
                 <div class="card-information">
-                    <a href=""> <h1>Chemistry-II</h1></a>
+                    <div class ="Chemistry-II"><h1>Chemistry-II</h1></div>
 
                     <p>Here a dummy text will come related to about us.Here a dummy text will come related to about us.</p>
                 </div>
-                <div class="card-subject chapter-card-1 hidden">
-                      <div class="close-subject">
-                          <button class="close-modal">&times;</button>
+                <div class="card-subject chapter-card-5 hidden">
+                      <div class="close-subject close-chem2">
+                          <button class="close-modal ">&times;</button>
                           <h4>CLOSE</h4>
                       </div>
                     <div class="chapter-button">1. Introduction to someting</div>
@@ -256,13 +256,12 @@
                     <img src="images/Teacher-pana.png" alt="">
                 </div>
                 <div class="card-information">
-                    <a href=""> <h1>Physics-II</h1></a>
-
+                    <div class ="Physics-II"><h1>Chemistry-II</h1></div>
                     <p>Here a dummy text will come related to about us.Here a dummy text will come related to about us.</p>
                 </div>
-                    <div class="card-subject chapter-card-1 hidden">
-                      <div class="close-subject">
-                          <button class="close-modal">&times;</button>
+                    <div class="card-subject chapter-card-6 hidden">
+                      <div class="close-subject close-phy2">
+                          <button class="close-modal ">&times;</button>
                           <h4>CLOSE</h4>
                       </div>
                     <div class="chapter-button">1. Introduction to someting</div>
