--- a/quiz-subject.html
+++ b/quiz-subject.html
@@ -98,7 +98,7 @@
                           <button class="close-modal">&times;</button>
                           <h4>CLOSE</h4>
                       </div>
-                    <div class="chapter-button">1. Introduction to someting</div>
+                    <div class="chapter-button"><a href="bio1-chap1.html">1. Introduction to someting</a> </div>
                     <div class="chapter-button">2. Introduction to someting</div>
                     <div class="chapter-button">3. Introduction to someting</div>
                     <div class="chapter-button">4. Introduction to someting</div>
